--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -742,11 +742,11 @@ html {
 
   #loading-overlay {
     position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(255, 255, 255, 1);
+    top: 72px;
+    left: 280px;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(255, 255, 255, 0.95);
     display: flex;
     flex-direction: column;
     justify-content: center;
